remove gear page

--- a/package.json
+++ b/package.json
@@ -33,6 +33,10 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@amcharts/amcharts5": "^5.3.8",
+		"@amcharts/amcharts5-fonts": "^5.0.1",
+		"@amcharts/amcharts5-geodata": "^5.1.0",
+		"colormap": "^2.3.2",
 		"plotly.js-dist": "^2.18.2"
 	}
 }
