--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
 		"autoprefixer": "^10.4.13",
-		"eslint": "^8.28.0",
+		"eslint": "^8.44.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte3": "^4.0.0",
 		"prettier": "^2.8.0",
@@ -37,6 +37,6 @@
 		"@amcharts/amcharts5-fonts": "^5.0.1",
 		"@amcharts/amcharts5-geodata": "^5.1.0",
 		"colormap": "^2.3.2",
-		"plotly.js-dist": "^2.18.2"
+		"plotly.js-dist-min": "^2.24.2"
 	}
 }
